--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -23,6 +23,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     background-color: var(--background-colour);
+    margin: 0;
 }
 
 
@@ -43,7 +44,7 @@ body {
 
 section {
     height: 100vh;
-    /* position: relative; */
+    position: relative;
 }
 
 header {
@@ -114,7 +115,7 @@ p {
 /*  SECTION 1 +navigation */
 .first-wrapper{
     height: 100%;
-    background-color: white;
+    /* background-color: white; */
     margin: 0;
     padding: 0;
    
@@ -207,7 +208,7 @@ p {
     background-color: red;
    }
 
-   
+
 
 .container {
     display: flex;
@@ -394,11 +395,6 @@ h1::after {
 
 
 /*-------------------- NAVIGATION MENU --------------------*/
-
-.menu {
-    position: fixed;
-    right: 0;
-}
 
 #siteNav ul {
     text-align: right;
@@ -640,7 +636,14 @@ also setting content to the appropriate
 text set in the data-text attribute. */
 
 .glitch-wrapper {
+    position: fixed;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;   
+    top: 50px;
     height: fit-content;
+    z-index: 0;
 }
 
 .glitch {
