--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -280,22 +280,59 @@ p {
     justify-content: space-around;
 }
 
-.map-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* justify-content: center; */
-    min-height: 100vh;
-    background-color: var(--background-colour);
+
+.contact-container {   
+    padding: 2em;
+    display: grid;
+    grid-template-columns:30% 40px 1fr ;
+    grid-template-rows: 50% 1fr;
 }
 
-.contact-container {
+.contact-container-grid-cell-top{
+    grid-row: 1;
+    grid-column: 1;
     display: flex;
-    /* flex-direction: column; */
-    padding-top: 3em;
-    min-width: 60vw;
-    justify-content: space-between;
-    height: fit-content;
+    justify-content: center;
+    flex-direction: column;;
+}
+.contact-container-grid-cell-bottom{
+    grid-row: 2;
+    grid-column: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.contact-container-grid-cell-mid-top{
+    grid-row: 1;
+    grid-column: 2;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;;
+}
+.contact-container-grid-cell-mid-bottom{
+    grid-row: 2;
+    grid-column: 2;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.contact-container-grid-cell-end-top{
+    grid-row: 1;
+    grid-column: 3;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+}
+.contact-container-grid-cell-end-bottom{
+    grid-row: 2;
+    grid-column: 3;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
 }
 
 .contact-container p,
@@ -526,11 +563,11 @@ h1::after {
 
 /* -- Text toggle -- */
 
-.container-basic input[type="radio"] {
+.toggle-parent input[type="radio"] {
     display: none;
 }
 
-.container-basic label {
+.toggle-parent label {
     display: flex;
     background-color: rgba(255, 255, 255, 0);
     cursor: pointer;
@@ -544,7 +581,6 @@ h1::after {
     padding: 5px 4px;
     /* min-width: 2rem; */
     font-size: 0.9rem;
-    margin: 5px;
     border: 1px solid rgba(255, 255, 255, 0.496);
     -webkit-transition: border-bottom 0.3s, background-bottom 0.3s;
     transition: border-bottom 0.3s, background-bottom 0.3s;
@@ -552,17 +588,17 @@ h1::after {
     transition-timing-function: linear;
 }
 
-.container-basic input[type="radio"]:checked+label {
+.toggle-parent input[type="radio"]:checked+label {
     background-color: rgba(255, 255, 255, 0.088);
     color: rgb(255, 255, 255);
 }
 
-.container-basic input[type="radio"]:disabled+label {
+.toggle-parent input[type="radio"]:disabled+label {
     background-color: rgba(255, 255, 255, 0);
     color: rgb(185, 185, 185);
 }
 
-.container-basic input[type="radio"]:hover+label {
+.toggle-parent input[type="radio"]:hover+label {
     background-color: rgba(255, 255, 255, 0.088);
 }
 
@@ -1114,7 +1150,6 @@ div {
 
 
 /*---------------------------- MAP ----------------------------*/
-
 #map {
     position: absolute;
     top: 50%;
@@ -1134,7 +1169,6 @@ div {
 
 
 /*---------------------------- IMAGES ----------------------------*/
-
 .small-icon {
     width: 20px;
     height: 20px;
