image hover effect

--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -458,8 +458,8 @@ h1::after {
     color: var(--text-colour);
     background-color: rgba(0, 0, 0, 0);
     -webkit-text-stroke: 1px;
+    z-index: 5;
 }
-
 
 /*-- styled checkbox SVG--*/
 
@@ -1136,23 +1136,11 @@ div {
 
 
 /*---------------------------- IMAGE EFFECTS ----------------------------*/
-.w {
-    margin: 0 auto;
-    white-space: nowrap;
-    max-width: 1200px;
-    width: 100%;
-    height: 600px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    overflow: hidden;
-    /* background: rgba(66, 66, 66, 0.5) url("https://unsplash.imgix.net/reserve/PPE2xapKRNyy2DlTt89F_Gutman_island.jpg?fit=crop&fm=jpg&h=1500&q=75&w=2400") repeat fixed; */
-    background-position: 50% 100%;
+.w {   
+    overflow: hidden;    
     background-size: cover;
     position: relative;
-    z-index: 5;
+    z-index: 0;
     font-size: 0;
   }
   
@@ -1161,11 +1149,11 @@ div {
     height: 100%;
     display: inline-block;
     position: relative;
-    z-index: 4;
+    z-index: 2;
     padding: 2px;
     -webkit-transition: all 1.3s ease-in-out;
     transition: all 1.3s ease-in-out;
-    background: rgba(66, 66, 66, 0.5) url("http://unsplash.imgix.net/reserve/de9uL9L7RSmzV4SAoAO5_Lauren%20and%20Winona%20Under%20a%20pass-1.jpg?fit=crop&fm=jpg&h=1500&q=75&w=2400") repeat fixed;
+    background: rgba(66, 66, 66, 0.5) url(../images/perceptiveDatascapes/projectImage.png) repeat fixed;
     background-size: cover;
     background-position: 50% 100%;
     border-radius: 0%;
@@ -1174,18 +1162,6 @@ div {
     -webkit-transition: all 0s linear;
     transition: all 0s linear;
     opacity: 0;
-  }
-  
-  .h {
-    display: block;
-    position: absolute;
-    z-index: 2;
-    width: 100%;
-    text-align: center;
-    top: 35px;
-    font-size: 40px;
-    color: beige;
-    text-shadow: 0 5px 17px rgba(87, 87, 80, 0.85);
   }
   
 
@@ -1199,7 +1175,7 @@ div {
 #perceptiveDatascapes-project-img {
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url(../images/perceptiveDatascapes/projectImage.png);
+    background-image: url(../images/perceptiveDatascapes/projectImageBack.png);
 }
 
 #rawbot-project-img {
