--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -23,7 +23,22 @@
 body {
     font-family: 'Roboto', sans-serif;
     background-color: var(--background-colour);
-    margin: 0;
+    margin: 0; 
+    height: 100vh;
+    overflow: hidden;
+}
+
+.scroll-container {
+    /* Always force (mandatory) scrolling to a snap point on the y-axis */
+    scroll-snap-type: y mandatory;
+    height: 100vh;
+    overflow-y: scroll;
+}
+
+.scroll-item {
+    scroll-snap-align: start;
+    scroll-snap-stop: normal;
+   
 }
 
 
@@ -113,12 +128,7 @@ p {
     display: none !important;
 }
 /*  SECTION 1 +navigation */
-.first-wrapper{
-    height: 100%;   
-    margin: 0;
-    padding: 0;
-   
-   }
+
    
    .above-nav{
      height: 100px;
@@ -261,6 +271,7 @@ p {
     grid-column: 2/3;
     display: flex;
     justify-content: center;
+    overflow: hidden;
  }
 
 .contact-container {   
@@ -1135,34 +1146,29 @@ div {
 }
 
 
-/*---------------------------- IMAGE EFFECTS ----------------------------*/
-.w {   
-    overflow: hidden;    
-    background-size: cover;
-    position: relative;
-    z-index: 0;
-    font-size: 0;
-  }
-  
-  .i {
-    width: 40px;
+/*---------------------------- IMAGE EFFECTS ----------------------------*/  
+.i {
+    width: 100px;
     height: 100%;
-    display: inline-block;
-    position: relative;
+    /* display: inline-block;
+    position: relative; */
+    display: flex;
     z-index: 2;
-    padding: 2px;
+    /* padding: 2px; */
     -webkit-transition: all 1.3s ease-in-out;
     transition: all 1.3s ease-in-out;
-    background: rgba(66, 66, 66, 0.5) url(../images/perceptiveDatascapes/projectImage.png) repeat fixed;
+    background: rgba(66, 66, 66, 0.5) url(../images/perceptiveDatascapes/projectImage.png);
+    background-attachment: ;
+    background-repeat: repeat;
     background-size: cover;
     background-position: 50% 100%;
     border-radius: 0%;
-  }
-  .i:hover {
+}
+.i:hover {
     -webkit-transition: all 0s linear;
     transition: all 0s linear;
     opacity: 0;
-  }
+}
   
 
 /*---------------------------- IMAGES ----------------------------*/
@@ -1183,12 +1189,40 @@ div {
     background-repeat: no-repeat;
     background-image: url(../images/perceptiveDatascapes/projectImage.png);
 }
+.i-rawbot {
+    width: 40px;
+    height: 100%;
+    display: inline-block;
+    position: relative;
+    z-index: 2;
+    padding: 2px;
+    -webkit-transition: all 1.3s ease-in-out;
+    transition: all 1.3s ease-in-out;
+    background: rgba(66, 66, 66, 0.5) url(../images/perceptiveDatascapes/projectImage.png) repeat fixed;
+    background-size: cover;
+    background-position: 50% 100%;
+    border-radius: 0%;
+  }
 
 #swapper-project-img {
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url(../images/perceptiveDatascapes/projectImage.png);
 }
+.i-swapper {
+    width: 40px;
+    height: 100%;
+    display: inline-block;
+    position: relative;
+    z-index: 2;
+    padding: 2px;
+    -webkit-transition: all 1.3s ease-in-out;
+    transition: all 1.3s ease-in-out;
+    background: rgba(66, 66, 66, 0.5) url(../images/perceptiveDatascapes/projectImage.png) repeat fixed;
+    background-size: cover;
+    background-position: 50% 100%;
+    border-radius: 0%;
+  }
 
 #urbanGrowth-project-img {
     background-size: cover;
