--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -1167,6 +1167,7 @@ div {
     background-size: cover;
     background-position: 50% 100%;
     border-radius: 0%;
+    /* box-shadow: inset 0px 10px 150px 10px rgba(0,0,0,0.8); */
 }
 .i:hover {
     -webkit-transition: all 0s linear;
@@ -1186,6 +1187,7 @@ div {
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url(../images/perceptiveDatascapes/projectImageBack.png);
+    box-shadow: inset 0px 0px 150px 60px rgba(0,0,0,0.8);
 }
 
 #rawbot-project-img {
@@ -1232,6 +1234,7 @@ div {
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url(../images/urbanGrowth/urbanGrowthPJimg.png);
+    box-shadow: inset 0px 0px 150px 60px rgba(0,0,0,0.9);
 }
 
 #highways1 {
