--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -93,10 +93,10 @@ h3 {
 }
 
 h6 {
-    margin-bottom: 0;
-    margin-top: 2.5rem;
+    margin: 0;    
     color: var(--colour-link);
-    font-weight: 300;
+    font-size: 1rem;
+    font-weight: 100;
     font-family: var(--font-family-subtitle);
 }
 
@@ -119,6 +119,31 @@ p {
     font-weight: 200;
 }
 
+/* ----------------- Divider */
+hr{        
+    width: 100%;
+    height: 3px;
+    border: none;
+    margin: 10px 0px 10px 0px;
+    border-top: 3px solid white; 
+    
+}
+.divider{
+    animation: animateleft 2s;
+}
+
+@keyframes animateleft{
+    0%{
+        margin-right:50px; 
+        width: 0;       
+        opacity: 0;
+    }
+    100%{
+        margin-right:0;
+        width: 100%; 
+        opacity: 1;        
+    }
+}
 
 /*-------------------- CONTAINERS --------------------*/
 
@@ -341,6 +366,16 @@ a {
     align-items: center;
 }
 
+.counter{    
+    position: fixed;
+    top: 50vh;
+    width: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px ;
+}
 
 /*-------------------- TEXT --------------------*/
 
@@ -375,6 +410,10 @@ a {
     to {
       background-position: 200% center;
     }
+}
+
+.scroll{
+    font-size: 0.8rem;
 }
 
 /*-------------------- HEADING ANIMATION --------------------*/
@@ -655,13 +694,15 @@ h1::after {
     position: fixed;
     display: flex;
     bottom: 1em;
-    right: 50%;
+    left: 50%;
+    transform: translate(-50%, 0);
     align-items: center;
     justify-content: center;
 }
 
 .scroll-arrow {
     position: absolute;
+    bottom: 10px;
     width: 40px;
     height: 40px;
     -webkit-transform: rotate(90deg);
@@ -673,8 +714,7 @@ h1::after {
 
 #cta {
     width: 100%;
-    cursor: pointer;
-    position: absolute;
+    cursor: pointer;   
 }
 
 #cta .arrow {
