--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -427,21 +427,41 @@ a {
     justify-content: center;
     padding-left: 50px;
     font-size: 0.5em;
+    
 }
 
 .grid-images{
-    grid-template-columns: auto 30% auto 30% auto;
-    grid-row: 1fr;
+    grid-template-columns: auto 30% 3% 30% auto;
+    grid-template-rows: 50% 1fr;
     display: grid;
+    width: 100vw;
+    height: 50vh;    
+    margin-bottom: 4em;
+}
+.grid-images-background-up{
+    grid-column: 1/-1;
+    grid-row: 1;
+    background-color: white;
+}
+.grid-images-background-down{
+    grid-column: 1/-1;
+    grid-row: 2;
+    background-color: var(--background-colour);
+}
+.grid-images-background-down-w{
+    grid-column: 1/-1;
+    grid-row: 1;
+    background-color:  var(--background-colour);
 }
 .grid-images-left{
-    grid-row: 1;
+    grid-row: 1/-1;
     grid-column: 2;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    /* justify-content: space-between; */
 }
 .grid-images-right{
-    grid-row: 1;
+    grid-row: 1/-1;
     grid-column: 4;
     display: flex;
     justify-content: space-between;
@@ -1082,6 +1102,14 @@ div {
 /* ----- Project Images ---- */
 #pc-wallpaper{
     background-image: url(../images/perceptiveDatascapes/cover.jpg);
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;
+}
+#pc-grid{
+    background-image: url(../images/perceptiveDatascapes/projectImage.png);
+    width: 100%;
+    height: 100%;
     background-size: cover;
     background-position: center;   
     background-repeat: no-repeat;
