--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -26,7 +26,7 @@ body {
     background-color: var(--background-colour);
     margin: 0;
     height: 100vh;
-    
+    overflow-x: hidden;
 }
 .body-restriction{
     overflow: hidden;
