--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -16,6 +16,7 @@
     --font-family-button: 'Montserrat', sans-serif;
     --font-family-input: 'Montserrat', sans-serif;
     --font-family-description: 'Montserrat', sans-serif;
+    --font-size-button: 0.7rem;
 }
 
 
@@ -112,7 +113,7 @@ h6 {
     font-family: var(--font-family-subtitle);
 }
 
-button {
+btn {
     color: var(--text-colour);
     background-color: rgba(116, 116, 116, 0.2);
     border: 0;
@@ -120,7 +121,7 @@ button {
 }
 
 input:focus,
-button:focus {
+btn:focus {
     outline: none;
 }
 
@@ -131,7 +132,7 @@ p {
     font-weight: 200;
 }
 
-/* ----------------- Divider */
+/* ----------------- Divider--------- */
 hr{        
     width: 100%;
     height: 3px;
@@ -634,7 +635,7 @@ h1::after {
 
 
 /*-------------------- BUTTONS --------------------*/
-.btns{
+/*.btns{
     border-radius: 4px;
     padding: 10px;
     margin:30px;
@@ -642,10 +643,94 @@ h1::after {
    -moz-appearance: button;
    appearance: button;
    text-decoration: none;
-   color: black;
+   /*color: black;
    background-color: grey;
    border-radius: 4px;
-}
+   --
+   cursor: pointer;
+  background: transparent;
+  border: 1px solid rgba(136, 138, 139, 0.527);
+  outline: none;
+  transition: 1s ease-in-out;
+} */
+
+.btn{
+    display: inline-block;
+    position: relative;
+    background: none;
+    border: none;
+    color: #fff;    
+    cursor: pointer;
+    margin: 20px 30px;
+    background: rgba(0, 0, 0, 0);
+    padding:0;
+  }
+  .btn > span{
+    display: block;
+    padding: 10px 30px;
+    border: 1px solid rgba(75, 75, 75, 0.50);
+    font-family: var(--font-family-button);
+    font-size: var(--font-size-button);
+  }
+  .btn::before, .btn::after{
+    content:"";
+    width: 0;
+    height: 2px;
+    position: absolute;
+    transition: all 0.2s linear;
+    background: #fff;
+    
+  }
+  
+  .btn>span::before, .btn>span::after{
+    content:"";
+    width:2px;
+    height:0;
+    position: absolute;
+    transition: all 0.2s linear;
+    background: #fff;
+  }
+  .btn:hover::before, .btn:hover::after{
+    width: 100%;
+  }
+  .btn:hover span::before, .btn:hover span::after{
+    height: 100%;
+  }
+
+  .btn-3::after{
+    left: 0;
+    bottom: 0;
+    transition-delay: 0.6s;
+  }
+  .btn-3 span::after{
+    transition-delay: 0.4s;
+    right: 0;
+    bottom: 0
+  }
+  .btn-3::before{
+    right: 0;
+    top: 0;
+    transition-delay: 0.2s;
+  }
+  .btn-3 span::before{
+    transition-delay: 0s;
+    left: 0;
+    top: 0;
+  }
+  
+  .btn-3:hover::after{
+    transition-delay: 0s;
+  }
+  .btn-3:hover span::after{
+    transition-delay: 0.2s;
+  }
+  .btn-3:hover::before{
+    transition-delay: 0.4s;
+  }
+  .btn-3:hover span::before{
+    transition-delay: 0.6s;
+  }
+  
 
 .project-button {
     font-size: 4em;
