--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -270,7 +270,11 @@ hr{
     background-color: blue;
    }
    .fourth-wrapper{
-    background-color: red;
+    
+     position: absolute;
+     align-self: center;
+       
+    
    }
 
 .container {
@@ -999,30 +1003,30 @@ h1::after {
 
 .bounceAlpha {
     animation-name: bounceAlpha;
-    animation-duration: 1.4s;
+    animation-duration: 1.5s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
 
 .arrow.first.bounceAlpha {
     animation-name: bounceAlpha;
-    animation-duration: 1.4s;
-    animation-delay: 0.2s;
+    animation-duration: 1.5s;
+    animation-delay: 0.4s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
 
 .scroll-arrow .arrow {
     animation-name: bounceAlpha;
-    animation-duration: 1.4s;
+    animation-duration: 1.5s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
 
 .scroll-arrow .arrow.first {
     animation-name: bounceAlpha;
-    animation-duration: 1.4s;
-    animation-delay: 0.2s;
+    animation-duration: 1.5s;
+    animation-delay: 0.4s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
