--- a/DecodeCollective/styles/Style.css
+++ b/DecodeCollective/styles/Style.css
@@ -115,7 +115,7 @@ h6 {
     font-family: var(--font-family-subtitle);
 }
 
-btn {
+.btn {
     color: var(--text-colour);
     background-color: rgba(116, 116, 116, 0.2);
     border: 0;
@@ -123,7 +123,7 @@ btn {
 }
 
 input:focus,
-btn:focus {
+.btn:focus {
     outline: none;
 }
 
@@ -1186,7 +1186,8 @@ div {
 }
 
 .offset-image{
-    margin: 20vh;
+    width: 70%;
+    height: 70%;
 }
 
 /*---------------------------- IMAGES ----------------------------*/
@@ -1302,6 +1303,14 @@ div {
     margin: 20vh 0;
   
 }
+
+#pc-offset-image{
+    background-image: url(../images/perceptiveDatascapes/finalgeom.jpg);
+    background-size: cover;
+    background-position: center;   
+    background-repeat: no-repeat;    
+}
+
 #vr-video{    
     background-size: contain;
     background-position: center;   
